[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/machine_background.png" type="Texture" id=1]
[ext_resource path="res://scripts/Machine_Grid.gd" type="Script" id=2]
[ext_resource path="res://scripts/terminals/grids/GRID.gd" type="Script" id=3]
[ext_resource path="res://scenes/drag_area_square.tscn" type="PackedScene" id=4]

[node name="GRID" type="Control" groups=[
"terminal",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -768.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Machine_Grid" type="Node2D" parent="." groups=[
"machine_grid",
]]
pause_mode = 2
position = Vector2( 400, 200 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="Machine_Grid"]
margin_left = -35.0486
margin_top = -68.032
margin_right = 98.9514
margin_bottom = -34.032
text = "Active Grid"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Node2D" parent="."]
pause_mode = 2
position = Vector2( 182.938, 537.91 )

[node name="Label" type="Label" parent="Inventory"]
margin_left = -56.0
margin_top = 20.0
margin_right = 37.0
margin_bottom = 47.0
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxArea2D17" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( -32.5681, 92.3284 )

[node name="BoxArea2D18" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 31.4319, 92.3284 )

[node name="BoxArea2D19" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 95.4319, 92.3284 )

[node name="BoxArea2D20" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 159.432, 92.3284 )

[node name="BoxArea2D21" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 223.432, 92.3284 )

[node name="BoxArea2D22" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 287.432, 92.3284 )

[node name="BoxArea2D23" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 351.432, 92.3284 )

[node name="BoxArea2D24" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 415.432, 92.3284 )

[node name="BoxArea2D25" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 479.432, 92.3284 )

[node name="BoxArea2D26" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 543.432, 92.3284 )

[node name="BoxArea2D27" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 607.432, 92.3284 )

[node name="BoxArea2D28" parent="Inventory" instance=ExtResource( 4 )]
position = Vector2( 671.432, 92.3284 )

[node name="ButtonCommit" type="Button" parent="."]
anchor_left = 0.829
anchor_top = 0.14
anchor_right = 0.891
anchor_bottom = 0.14
margin_left = 800.0
margin_top = 240.0
margin_right = -0.466248
margin_bottom = 0.140236
text = "Commit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="."]
visible = false
anchor_left = 0.829
anchor_top = 0.194
anchor_right = 0.891
anchor_bottom = 0.194
margin_left = 800.0
margin_top = 150.0
margin_right = -0.466248
margin_bottom = 0.140236
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSaveReload" type="Button" parent="."]
visible = false
anchor_left = 0.829
anchor_top = 0.194
anchor_right = 0.891
anchor_bottom = 0.194
margin_left = 800.0
margin_top = 200.0
margin_right = -0.466248
margin_bottom = 0.140236
text = "Save and Reload"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="Label" parent="."]
margin_left = 802.0
margin_top = 272.0
margin_right = 986.0
margin_bottom = 581.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonCommit" to="." method="_on_ButtonCommit_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="pressed" from="ButtonSaveReload" to="." method="_on_ButtonSaveReload_pressed"]
